src/test/testFiles/valid/example.manimdsl
let x = 1;
let y: Stack = new Stack;
y.push(x);
let z = y.pop();