src/test/testFiles/invalid/semanticErrors/incorrectMethodName.manimdsl
let x = new Stack<number>();
x.hello(5);